fix(flux): removed comments and added extra margin

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -154,6 +154,10 @@ nav {
     margin-top: -20px;
 }
 
+.home {
+    margin-bottom: 5rem;
+}
+
 .page-header {
     background-color: $brand-color;
     height: 10rem;
